--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "module": "dist/index.js",
   "scripts": {
     "start": "webpack-dev-server --progress --inline --hot --port 8080",
-    "build": "cross-env NODE_ENV=production babel src --out-dir dist"
+    "build": "cross-env NODE_ENV=production babel src --out-dir dist",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
+    "docz:serve": "docz build && docz serve"
   },
   "files": [
     "dist",
@@ -29,6 +32,7 @@
     "styled-components": "^5.0.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3"
+    "webpack-dev-server": "^3.10.3",
+    "docz": "^2.2.0"
   }
 }
