Migrando para React JSS

--- a/package.json
+++ b/package.json
@@ -25,14 +25,16 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "cross-env": "^7.0.0",
+    "docz": "^2.2.0",
     "html-webpack-plugin": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "styled-components": "^5.0.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.3",
-    "docz": "^2.2.0"
+    "webpack-dev-server": "^3.10.3"
+  },
+  "dependencies": {
+    "react-jss": "^10.0.4"
   }
 }
